fixing tablet readMore image wrapping

--- a/styles/sass/layout/_readMore.scss
+++ b/styles/sass/layout/_readMore.scss
@@ -26,7 +26,6 @@
 
     img {
       width: 95%;
-
     }
 
     .firstImg {
@@ -50,11 +49,6 @@
       .lastTxtContainer {
         padding-right: 2vw;
         padding-left: 0px;
-      }
-
-      img {
-        min-width: 450px;
-        height: auto;
       }
 
       .firstImg {
